web programming template formatting

--- a/cc/06_web/05_pipeline-range-else/tpl.gohtml
+++ b/cc/06_web/05_pipeline-range-else/tpl.gohtml
@@ -7,8 +7,8 @@
 <body>
 <ul>
     {{range .}}
-    <li>{{.}}</li>
-    {{else}}
+    <li>{{.}}</li>{{else}}
+
     <li>NO ITEMS</li>
     {{end}}
 </ul>
